kubernetes/checkout/frontend/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: checkout-web-service
spec:
  selector:
    app: checkout-web
    tier: frontend
  ports:
  - protocol: TCP
    port: 8083
    targetPort: 8083
