kubernetes/checkout/frontend/service.yml
kind: Service
apiVersion: v1
metadata:
  name: checkout-web-service
spec:
  type: NodePort
  selector:
    app: checkout-web
    tier: frontend
  ports:
  - port: 8083
    targetPort: 8083
    nodePort: 30015
